install eslint, prettier and configure husky with lint-staged

--- a/.eslintrc
+++ b/.eslintrc
@@ -36,6 +36,7 @@
     "react/display-name": 0,
     "react/jsx-props-no-spreading": 0,
     "react/state-in-constructor": 0,
+    "no-named-as-default": 0,
     "react/jsx-filename-extension": [
       1,
       {
