--- a/package.json
+++ b/package.json
@@ -37,10 +37,13 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
     "husky": "^4.2.1",
-    "prettier": "^1.19.1"
+    "lint-staged": "^10.0.5",
+    "prettier": "^1.19.1",
+    "prettier-eslint": "^9.0.1"
   },
   "husky": {
     "hooks": {
@@ -50,8 +53,7 @@
   "lint-staged": {
     "*.js": [
       "prettier --config .prettierrc --write",
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ]
   }
 }
