--- a/.eslintrc
+++ b/.eslintrc
@@ -33,6 +33,7 @@
   },
 
   "rules": {
+    "jsx-a11y/label-has-associated-control": 0,
     "import/prefer-default-export": 0,
     "class-methods-use-this": 1,
     "react/display-name": 0,
