--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test ",
+    "test:coverage": "react-scripts test  --coverage --watchAll=false",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -43,6 +44,7 @@
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
     "husky": "^4.2.1",
+    "jest-styled-components": "^7.0.0",
     "lint-staged": "^10.0.5",
     "prettier": "^1.19.1",
     "prettier-eslint": "^9.0.1"
