--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,10 @@
 {
-  "plugins": ["react", "prettier"],
   "extends": [
     "eslint:recommended",
-    "react-app",
     "airbnb",
-    "plugin:react/recommended",
-    "prettier"
+    "prettier",
+    "prettier/react",
+    "plugin:react/recommended"
   ],
   "globals": {
     "window": true,
@@ -14,6 +13,7 @@
   "env": {
     "jest": true
   },
+  "plugins": ["react"],
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 6,
@@ -31,7 +31,6 @@
       }
     }
   },
-
   "rules": {
     "jsx-a11y/label-has-associated-control": 0,
     "import/prefer-default-export": 0,
@@ -47,5 +46,6 @@
         "extensions": [".js", ".jsx"]
       }
     ]
-  }
+  },
+  "prettier/prettier": "error"
 }
