--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test ",
     "test:coverage": "react-scripts test  --coverage --watchAll=false",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "aws s3 cp build/ s3://aws-circle-ci --recursive"
   },
   "eslintConfig": {
     "extends": "react-app"
